feat: implementasi API CRUD untuk Status Mahasiswa
Perubahan yang dilakukan:

 - Menambah endpoint API untuk operasi CRUD (Create, Read, Update, Delete) pada data Status Mahasiswa.

 - Membuat StoreStatusMhsRequest dan UpdateStatusMhsRequest untuk validasi data yang masuk.

 - Menghapus beberapa komentar kode yang tidak relevan dan rute API  yang tidak terpakai.
